[package]
name = "audmesh"
version = "0.1.0"
edition = "2024"

[dependencies]
symphonia = { version = "0.5.5", features = ["all"] }
rustfft = "6"
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }
rand = "0.9"
ratatui = "0.30.2"
crossterm = "0.29.0"
ratatui-ratty = "0.3.1"
icosphere = "0.2.0"
hexasphere = "18.0.0"
byteorder = "1.5.0"
fastnoise-lite = "1"